fix: changed input width calculation based on value lenght in adaptive mode, removed input animation to prevent value jumping. #ui #build

--- a/app/(auxiliary)/components/UI/Inputs/Input/Input.module.scss
+++ b/app/(auxiliary)/components/UI/Inputs/Input/Input.module.scss
@@ -11,6 +11,8 @@
 
 	.inputBox {
 		position: absolute;
+		top: 0;
+		left: 0;
 		z-index: 3;
 
 		width: 100%;
@@ -29,7 +31,7 @@
 			border-color: transparent;
 			background-color: transparent;
 			outline: none;
-			transition: .5s ease;
+			//transition: width .5s ease;
 
 			&[type="text"], &[type="password"], &[type="tel"] {
 				font-family: inherit;
